@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4FRSceneFunc.icc,v 1.10 1999-12-15 14:54:01 gunter Exp $
+// $Id: G4FRSceneFunc.icc,v 1.11 2001-01-25 15:28:07 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -241,6 +241,8 @@ void G4FRSCENE::AddPrimitive ( const G4Polyhedron& polyhedron )
 #if defined DEBUG_FR_SCENE
 	G4cerr << "***** AddPrimitive( G4Polyhedron )\n";
 #endif
+
+	if (polyhedron.GetNoFacets() == 0) return;
 
 		//----- Initialize Fukui Renderer IF NECESSARY
 	FRBeginModeling();
